tests/int/use_command/snapshots/integration__int__use_command__binaries__modules_main_bin_d_1.snap
---
source: tests/int/use_command/binaries.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - main
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
modules

----- stderr -----
